feat: show word
